fix: update admin and website uiux (still have something to fix}
